<resources>
    <string name="app_name">LayoutType</string>
    <string name="user_name">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="Grid_view">Grid View</string>
    <string name="list_view">List View</string>
    <string name="web_view">Web View</string>
   </resources>